--- a/adblocker/manifest.json
+++ b/adblocker/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "AdBlocker",
   "version": "1.0",
-  "description": "A simple adblocker",
+  "description": "A simple adblocker blocking ads and trackers",
   "permissions": ["webRequest", "webRequestBlocking", "http://*/", "https://*/"],
   "background": {
     "scripts": ["blocked_domains.js", "background.js"]
